--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,28 @@ html
 	head
 		title= title
 		link(rel="stylesheet", href="bootstrap.min.css")
+		script(src="bootstrap.min.js")
+		style.
+			.container {
+				margin-top: 50px;
+			}
 	body
-		div.container
+		nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
+			.container-fluid
+				div.navbar-header
+					button.navbar-toggle(type="button", data-toggle="collapse", data-target="#bs-example-navbar-collapse-1")
+						.sr-only Toggle navigation
+						.icon-bar
+						.icon-bar
+						.icon-bar
+					a.navbar-brand(href="#") Brand
+				.collapse.navbar-collapse#bs-example-navbar-collapse-1
+					ul.nav.navbar-nav
+						li.active
+							a(href="arrivals") Arrivals
+						li
+							a(href="list") List
+						li
+							a(href="user") User
+		.container
 			block content
